[package]
name = "radio-test"
version = "0.1.0"
authors = ["nathaniel.wert <nathaniel.wert@kudelski.security.com>"]
edition = "2021"

[dependencies]
cortex-m = "0.7"
embedded-hal = "0.2"
# Remove me if you don't want logging.
log = "0.4"
# embedded-nrf24l01 = { git = "https://github.com/N8BWert/embedded-nrf24l01.git" }
# nrf24-rs = "0.1.1"
nrf24l01 = { git = "https://github.com/maikelwever/nrf24l01.git" }

[dependencies.teensy4-bsp]
version = "0.4"
features = ["usb-logging", "rt"]

[dependencies.rtic]
version = "2.0.1"
features = ["thumbv7-backend"]

[dependencies.rtic-monotonics]
version = "1.0.0"
features = ["cortex-m-systick"]

[dependencies.teensy4-panic]
version = "0.2"
features = ["log"]

[workspace]
members = [
    "tools",
]

# Don't optimize build dependencies, like proc macros.
# Helps with build times.
[profile.release.build-override]
opt-level = 0
